# touchtron

./: COPYRIGHT  README.md  log.org  readme.org
analysis/: heatmap.py  heatmap_cv.py  opencv_perf_test.py  perf_test.py  read_usb.py
firmware/: Cargo.toml  openocd.cfg  openocd.gdb
firmware-discoveryf0/.cargo/: config
firmware-discoveryf0/src/: main.rs
firmware-f0/: Cargo.toml  memory.x  openocd.cfg
firmware-f0/src/: adc.rs  main.rs  reporter.rs
firmware-f103/: Cargo.toml  openocd.cfg
firmware-f103/src/: counter.rs  main.rs  reporter.rs
firmware/src/: main.rs
pcb/: 0_touchtron.lib  fp-lib-table  generate_gerbers.py  sym-lib-table  touchtron.kicad_pcb  touchtron.pro  touchtron.sch  touchtron.xml
pcb/0_touchtron.pretty/: TS-1187A.kicad_mod  lv_10mm_silk.kicad_mod  supremei_10mm.kicad_mod  touchpad_49_10_15.kicad_mod  usb_a_edge_connector.kicad_mod
pcb/submitted_2020_05_26/: attrs.json  bom.csv  centroid.csv
